--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: black;
+}
+
 body {
   font-family: "Circe", "Montserrat", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -47,4 +51,15 @@ main.unit-fahrenheit .celsius-button {
 
 canvas {
   display: block;
+  animation: bgFadeIn 1500ms ease-in-out;
+}
+
+@keyframes bgFadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 100%;
+  }
 }
