--- a/src/css/weather-symbol.scss
+++ b/src/css/weather-symbol.scss
@@ -9,7 +9,8 @@
 }
 
 .weather-symbol {
-  width: 100%;
+  max-width: 90%;
+  max-height: 200px;
 }
 
 .weather-description {
@@ -18,7 +19,21 @@
   font-weight: 600;
 }
 
-.weather-type-scattered-clouds {
+.weather-type-clear > .weather-description {
   color: #ffbf00;
-  margin-left: 38%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+.weather-type-clear > .weather-symbol {
+  animation: sunRotation 200s infinite;
+}
+
+@keyframes sunRotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
